--- a/src/Asteroids/.gitignore
+++ b/src/Asteroids/.gitignore
@@ -73,3 +73,10 @@ crashlytics-build.properties
 # Temporary auto-generated Android Assets
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
+
+# Track important Unity files
+!*.unity
+!*.unity.meta
+!/[Aa]ssets/
+!/[Pp]rojectSettings/
+!/[Pp]ackages/
