--- a/src/Asteroids3D/Packages/manifest.json
+++ b/src/Asteroids3D/Packages/manifest.json
@@ -1,24 +1,26 @@
 {
   "dependencies": {
-    "com.unity.ai.navigation": "2.0.0",
-    "com.unity.burst": "1.8.10",
-    "com.unity.cinemachine": "2.10.0",
+    "com.unity.ai.navigation": "2.0.8",
+    "com.unity.behavior": "1.0.11",
+    "com.unity.burst": "1.8.21",
+    "com.unity.cinemachine": "2.10.3",
     "com.unity.collab-proxy": "2.8.2",
     "com.unity.ext.nunit": "2.0.5",
-    "com.unity.ide.rider": "3.0.27",
-    "com.unity.ide.visualstudio": "2.0.22",
+    "com.unity.ide.rider": "3.0.36",
+    "com.unity.ide.visualstudio": "2.0.23",
     "com.unity.ide.vscode": "1.2.5",
-    "com.unity.mathematics": "1.2.6",
-    "com.unity.postprocessing": "3.3.0",
-    "com.unity.recorder": "5.0.0",
-    "com.unity.render-pipelines.core": "16.0.4",
-    "com.unity.render-pipelines.universal": "16.0.5",
+    "com.unity.mathematics": "1.3.2",
+    "com.unity.multiplayer.center": "1.0.0",
+    "com.unity.postprocessing": "3.4.0",
+    "com.unity.recorder": "5.1.2",
+    "com.unity.render-pipelines.core": "17.1.0",
+    "com.unity.render-pipelines.universal": "17.1.0",
     "com.unity.searcher": "4.9.2",
-    "com.unity.shadergraph": "16.0.4",
-    "com.unity.test-framework": "1.3.9",
-    "com.unity.timeline": "1.8.6",
+    "com.unity.shadergraph": "17.1.0",
+    "com.unity.test-framework": "1.5.1",
+    "com.unity.timeline": "1.8.7",
     "com.unity.ugui": "2.0.0",
-    "com.unity.visualscripting": "1.8.0",
+    "com.unity.visualscripting": "1.9.7",
     "com.unity.modules.accessibility": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
