Asteroid Field Manager refactor for multiple arena isntances, add RLArbiter stub, import MLAgents

--- a/src/Asteroids3D/Assets/Scripts/GameCore.asmdef
+++ b/src/Asteroids3D/Assets/Scripts/GameCore.asmdef
@@ -1,6 +1,9 @@
 {
     "name": "Game.Core",
-    "references": [],
+    "rootNamespace": "",
+    "references": [
+        ""
+    ],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
@@ -10,4 +13,4 @@
     "defineConstraints": [],
     "versionDefines": [],
     "noEngineReferences": false
-} 
+}
