--- a/src/Asteroids3D/Packages/manifest.json
+++ b/src/Asteroids3D/Packages/manifest.json
@@ -10,6 +10,7 @@
     "com.unity.ide.visualstudio": "2.0.23",
     "com.unity.ide.vscode": "1.2.5",
     "com.unity.mathematics": "1.3.2",
+    "com.unity.ml-agents": "3.0.0",
     "com.unity.multiplayer.center": "1.0.0",
     "com.unity.postprocessing": "3.4.0",
     "com.unity.recorder": "5.1.2",
