Update boundary reward system

--- a/src/Asteroids3D/Assets/ML-Agents/results/SelfPlay_v3/configuration.yaml
+++ b/src/Asteroids3D/Assets/ML-Agents/results/SelfPlay_v3/configuration.yaml
@@ -5,7 +5,7 @@ behaviors:
     hyperparameters:
       batch_size: 1024
       buffer_size: 10240
-      learning_rate: 0.0003
+      learning_rate: 0.0002
       beta: 0.002
       epsilon: 0.2
       lambd: 0.95
@@ -35,11 +35,11 @@ behaviors:
           memory: null
           goal_conditioning_type: hyper
           deterministic: false
-    init_path: null
+    init_path: results\SelfPlay_v2\RLPilot\checkpoint.pt
     keep_checkpoints: 5
     even_checkpoints: false
     max_steps: 10000000
-    time_horizon: 1024
+    time_horizon: 2048
     summary_freq: 20000
     threaded: false
     self_play:
@@ -76,7 +76,7 @@ environment_parameters:
     - value:
         sampler_type: uniform
         sampler_parameters:
-          seed: 2788
+          seed: 518
           min_value: 40.0
           max_value: 80.0
       name: arena_size
@@ -86,16 +86,16 @@ environment_parameters:
     - value:
         sampler_type: uniform
         sampler_parameters:
-          seed: 2789
+          seed: 519
           min_value: 0.4
           max_value: 0.8
       name: asteroid_density
       completion_criteria: null
 checkpoint_settings:
-  run_id: SelfPlay_v2
-  initialize_from: null
+  run_id: SelfPlay_v3
+  initialize_from: SelfPlay_v2
   load_model: false
-  resume: true
+  resume: false
   force: false
   train_model: false
   inference: false
