added utility pilot (Unstable)

--- a/src/Asteroids3D/Assets/Scripts/AI/BT/Behavior.asmdef
+++ b/src/Asteroids3D/Assets/Scripts/AI/BT/Behavior.asmdef
@@ -5,7 +5,8 @@
         "Game.Core",
         "Unity.Behavior.Runtime",
         "Unity.Behavior",
-        "Unity.Behavior.Authoring"
+        "Unity.Behavior.Authoring",
+        "SerializableGUID"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
