fixed the asteroid spawner bug!

--- a/src/Asteroids3D/Assets/Tests/PlayMode/Tests.PlayMode.asmdef
+++ b/src/Asteroids3D/Assets/Tests/PlayMode/Tests.PlayMode.asmdef
@@ -2,16 +2,13 @@
     "name": "Tests.PlayMode",
     "rootNamespace": "",
     "references": [
-        "UnityEngine.TestRunner",
-        "UnityEditor.TestRunner",
-        "Behavior",
-        "Game.RL",
-        "Unity.ML-Agents",
-        "Unity.ML-Agents.Extensions",
-        "Game.Core"
+        "GUID:27619889b8ba8c24980f49ee34dbb44a",
+        "GUID:0acc523941302664db1f4e527237feb3",
+        "GUID:5aec7dd6c99f4df47918cb5822b2c659"
     ],
     "includePlatforms": [
-        "Editor"
+        "Editor",
+        "WindowsStandalone64"
     ],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
@@ -19,7 +16,7 @@
     "precompiledReferences": [
         "nunit.framework.dll"
     ],
-    "autoReferenced": false,
+    "autoReferenced": true,
     "defineConstraints": [
         "UNITY_INCLUDE_TESTS"
     ],
